# cpp-example-googletest

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  main.cpp  math.cpp  math.h
tests/: CMakeLists.txt  foo_test.cpp  math_test.cpp
